[package]
name = "revel_cell"
version = "0.1.0"
edition = "2024"
authors = ["aurorax-neo"]
description = "revel_cell"
license = "LICENSE"
repository = "https://github.com/aurorax-neo/revel_cell"
documentation = "https://docs.rs/revel_cell"
keywords = ["arc", "unsafe", "cell"]
categories = []
readme = "README.md"

[dependencies]

[features]
default = []
thread-safe = []